# health_analysis

./: .env  .gitignore  README.md  commands.md  data-store.code-profile  old.toml  pg_service.conf  pyproject.toml
scripts/: create_meals_table.sql  docker-compose.yml  insert_meal.sql  setup_rabbitmq.sh
src/: __main__.py  app.py  async.py  bootstrap.py  bro.py  brokers.py  config.py  config.toml  event_listener.py  logger.py  main.py  new_main.py  testi.py  testi2.py  types.py
src/_LEGACY/events/: handler.py
src/_LEGACY/messages/: broker.py
src/_LEGACY/messages/taskiq/: broker.py
src/abstractions/: handler.py
src/adapters/: broker.py  brokers.py  clients.py  database.py  databases.py  eventbus.py
src/adapters/api/eventstore/: exceptions.py  health_events_handler.py  meal_events_handler.py
src/adapters/exceptions/: brokers.py
src/api/: db_clients.py  handlers.py
src/api/clients/: broker.py  timescale.py
src/api/dependencies/: app.py  handlers.py  pools.py
src/api/health/: brokers.py  container.py  health.py  tasks.py
src/api/meals/: bootstrap.py  broker.py  brokers.py  container.py  events.py  handler.py  models.py  mutations.py  queries.py  repository.py  tasks.py  types.py
src/api/meals/delete/: event.py
src/api/meals/insert/: event.py  handler.py  model.py  mutation.py  query.py  tasks.py
src/api/models/: utils.py
src/api/mutations/: meals.py
src/api/utils/: validator.py
src/bootstrap/brokers/: meals.py
src/brokers/: meals.py  meals_broker.py  utils.py
src/config/: config.py  config.toml  connection_string.py  connection_strings.py  exceptions.py  field_validator.py  flow.py  typing.py  validation.py
src/container/: app.py  clients.py  core.py  eventbus.py  pools.py
src/containers/: application_container.py  meals.py  meals_container.py  resource_management.py  wrapper.py
src/containers/domain/: meals.py
src/containers/utils/: resource_management.py
src/containers/workers/: meals.py
src/dependencies/: app.py  bootstrap.py  connections.py  core.py  database.py  event_bus.py  eventbus.py  events_bus.py  meals.py  pools.py
src/dependencies/domain/: meals.py
src/dependencies/eventbus/: container.py
src/dependencies/infrastructure/: database.py
src/dependencies/meals/: container.py  eventbus.py  factories.py  meals_container.py
src/dependencies/utils/: factories.py
src/domain/events/meals/: delete.py  insert.py
src/domain/meals/: events.py  models.py  queries.py  tasks.py
src/domain/models/meals/: delete.py  insert.py  meal_model.py  meal_results.py
src/domains/meals/: queries.py
src/exceptions/: broker_exceptions.py
src/handler/: exceptions.py  health.py  meals.py
src/handlers/: meals_handler.py
src/ports/spi/events/: client.py  handler.py  subscription.py
src/ports/spi/messages/: broker.py
src/ports/spi/persistence/: create_meal_port.py  delete_meal_port.py  repository.py  (+1 more)
src/processes/: event_bus.py  meals_broker.py  utils.py
src/tasks/: meal_tasks.py  meals.py
src/tasks/meals/: add_meal_task.py  delete.py  insert.py  remove_meal_task.py
src/test_taksiq/: main.py  meals_broker.py  meals_container.py  meals_tasks.py  pyproject.toml  wiring.py
tests/: conftest.py  events.py
tests/unit/config/: test_connection_string.py  test_validation.py
(+29 files in other folders)
