[tool.pyright]
venvPath = "/home/w0lg0r/.cache/pypoetry/virtualenvs"
venv = "health-analysis-B8A5gI3c-py3.12"

[tool.poetry]
name = "health-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "tests" },
]

[tool.poetry.scripts]
bootstrap = "src.bootstrap:main"
events = "tests.events:run"

[tool.poetry.dependencies]
python = "^3.12"
esdbclient = "^1.1"
mypy = "^1.11.1"
python-dotenv = "^1.0.1"
black = "^24.8.0"
pylint = "^3.2.6"
pydantic = "^2.8.2"
faker = "^28.0.0"
psycopg2-binary = "^2.9.9"
toml = "^0.10.2"
dependency-injector = "4.42.0b1"
pyaml = "^24.7.0"
asyncpg = "^0.29.0"
taskiq-dependencies = "^1.5.3"
taskiq-aio-pika = "^0.4.1"
isort = "^5.13.2"
taskiq = {extras = ["reload"], version = "^0.11.7"}

[tool.isort]
profile = "black"
force_sort_within_sections = true

[tool.ruff]
# Disable unused-import (F401)
# ignore = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
