[tool.poetry]
name = "taskiq-health"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taskiq = "^0.11.7"
taskiq-aio-pika = "^0.4.1"
taskiq-redis = "^1.0.0"
dependency-injector = "^4.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
